# goit-pythonweb-hw-03

./: Dockerfile  docker-compose.yaml  index.html  main.py  message.html  pyproject.toml
storage/: data.json
templates/: error.html  index.html  message.html  read.jinja
